# Simple-broadcast-server

./: main.py  pyproject.toml
templates/: index.html
