[tool.poetry]
name = "chatwithsocket"
version = "0.1.0"
description = ""
authors = ["Nikita Orlovsky <orlovski15555@gmail.com>"]
packages = [{ include = "chatwithsocket", from = "." }]  # можно удалить, если нет пакета

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
jinja2 = "^3.1.6"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
